src/snapshots/afrotd__parser__tests__interpretation_html_10.1.6_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.1.6.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Ballträger B17 verhöhnt und beleidigt an der A-11 den ihn
            verfolgenden A55, bevor er einen abgefangenen Pass zu einem
            Touchdown trägt. Nachdem B17 die Goalline überquert hat, tackelt
            ihn A55 fünf Meter tief in A’s Endzone.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Unsportliches Verhalten von B17 und A55. Beide Strafen werden
                durchgeführt. Die Strafe für B17’s Live Ball Foul wird von der
                A-11, dem Punkt des Fouls durchgeführt. Das Dead Ball Foul von
                A55 wird vom Succeeding Spot durchgeführt. B’s Ball, 1. und 10
                von der A-13.
            </p>
        </details>
    </div>
</article>
