src/snapshots/afrotd__parser__tests__interpretation_html_10.1.6_5.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.1.6.V
        </p>
    </div>
    <div class="message-body">
        <p>
            Es haben sich keine Fouls ereignet, als Team B einen legalen Team
            A-Vorwärtspass abfängt. Bei dem Runback clippt ein Team B-Spieler.
            Als der Ball dead wird, springt ein Team A-Spieler nach.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B erhält den Ball. Bestrafe Team B für sein Clipping-Foul
                und danach Team A für das Dead Ball Foul. Die Distanzen
                gleichen sich aus, es sei denn, ein Enforcement Spot befand
                sich innerhalb der 30-Meterlinie und die Strafe wurde in
                Richtung dieser Goalline durchgeführt.
            </p>
        </details>
    </div>
</article>
