src/snapshots/afrotd__parser__tests__interpretation_html_10.1.6_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.1.6.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A puntet und begeht eine Touching Violation. B1 clippt während
            des Punt Returns, der von B2 gefumbelt wird. A1 recovert den Fumble
            und A2 foult, nachdem der Ball dead ist.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A hat zuerst die Wahl, weil Team B während eines Live
                Balls gefoult hat. Wenn Team A die Strafe für Team B’s Foul
                ablehnt, erhält Team B den Ball am Punkt der Violation mit der
                Möglichkeit der Strafdurchführung für Team A’s Dead Ball Foul.
                Wenn Team A die Strafe für Team B’s Foul annimmt, gehört der
                Ball Team B nach der Strafdurchführung des Live Ball Fouls,
                gefolgt von der Strafe für das Dead Ball Foul.
            </p>
        </details>
    </div>
</article>
