src/snapshots/afrotd__parser__tests__interpretation_html_10.2.2_10.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.2.X
        </p>
    </div>
    <div class="message-body">
        <p>
            1. und 10 von der A-30. A1 advanct den Ball bis zu der B-40, wo er
            zu Boden gebracht wird. Während des Laufes clippt B1 an der A-45.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Strafe – 15 Meter von der B-40, die der Basic Spot ist. 1. und
                10 von der B-25.
            </p>
        </details>
    </div>
</article>
