src/snapshots/afrotd__parser__tests__interpretation_html_10.2.2_11.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.2.XI
        </p>
    </div>
    <div class="message-body">
        <p>
            1. und 10 von der A-40. A1 advanct den Ball bis zu der B-40, wo er
            fumbelt. Während A1’s Lauf oder während des Fumbles verursacht B2
            ein persönliches Foul an der 50. B1 recovert und advanct über Team
            A’s Goalline.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Strafe – 15 Meter vom Basic Spot, welcher das Ende des mit dem
                Foul verbundenen Laufes ist (B-40) und ein First Down für Team
                A.
            </p>
        </details>
    </div>
</article>
