src/snapshots/afrotd__parser__tests__interpretation_html_10.2.2_14.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.2.XIV
        </p>
    </div>
    <div class="message-body">
        <p>
            B1 fängt tief in seiner Endzone einen legalen Vorwärtspass ab (kein
            Try), läuft mit dem Ball, ist aber nicht in der Lage, die Endzone
            zu verlassen, wo er zu Boden gebracht wird. Während des Laufes
            clippt B2 A1 (a) an der B-25, (b) an der B-14, (c) in B’s Endzone.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Basic Spot ist die B-20. (a) 1. und 10 von der B-10. (b) 1. und
                10 von der B-7. (c) Safety (Regeln 8.5.1.b, 8.6.1 und
                10.2.2.d.2.a).
            </p>
        </details>
    </div>
</article>
