src/snapshots/afrotd__parser__tests__interpretation_html_10.2.2_5.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.2.V
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A puntet von seiner Endzone und der Ball wird bis zu der A-30
            zurückgetragen, wo gefumbelt wird. A23 clippt B35 in Team A’s
            Endzone, während der Ball durch den Fumble frei ist. Der Ball wird
            im Spielfeld recovert.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Strafe – 15 Meter vom Basic Spot, dem Fumble-Punkt. Team B’s
                Ball, First Down und 10.
            </p>
        </details>
    </div>
</article>
