src/snapshots/afrotd__parser__tests__interpretation_html_10.2.3_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.3.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Eines der Teams foult während eines Scrimmage Kicks, nachdem der
            Ball jenseits der neutralen Zone berührt wurde. Das Foul ereignet
            sich jenseits der neutralen Zone und Team B bringt den Ball als
            nächstes ins Spiel.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Für Team B-Fouls wird die Strafe nach dem Drei-und-Eins-Prinzip
                durchgeführt, mit dem Postscrimmage Kick Spot als Basic Spot
                (Regel 2.25.11). Team B’s Ball, First Down und 10. Für Team
                A-Fouls wird die Strafe entweder vom Previous Spot oder von dem
                Punkt, an dem der anschließende Dead Ball zu Team B gehört,
                durchgeführt (Regel 6.3.13).
            </p>
        </details>
    </div>
</article>
